tests/baselines/reference/unusedTypeParameters_templateTag.errors.txt
/a.js(1,5): error TS6133: 'T' is declared but its value is never read.


==== /a.js (1 errors) ====
    /** @template T */
        ~~~~~~~~~~~~
!!! error TS6133: 'T' is declared but its value is never read.
    function f() {}
    